# serializer version: 1
# name: test_all_devices_data
  list([
    Device(
      bidirectional=True,
      date_added=datetime.datetime(2022, 10, 2, 9, 22, 35, tzinfo=datetime.timezone.utc),
      id='9x9x1f12xx3x',
      main_device=True,
      name='Wohnung unten',
      type=<DeviceType.POWER_METER: 0>,
    ),
    Device(
      bidirectional=True,
      date_added=datetime.datetime(2022, 10, 2, 9, 22, 35, tzinfo=datetime.timezone.utc),
      id='9x9x1f12xx2x',
      main_device=True,
      name='Wohnung oben',
      type=<DeviceType.POWER_METER: 0>,
    ),
    Device(
      bidirectional=False,
      date_added=datetime.datetime(2022, 10, 2, 9, 22, 35, tzinfo=datetime.timezone.utc),
      id='9x9x1f12xx1x',
      main_device=True,
      name='Poweropti',
      type=<DeviceType.COLD_WATER_METER: 1>,
    ),
    Device(
      bidirectional=False,
      date_added=datetime.datetime(2022, 10, 2, 9, 22, 35, tzinfo=datetime.timezone.utc),
      id='9x9x1f12flow',
      main_device=True,
      name='FLOW',
      type=<DeviceType.GAS_METER: 4>,
    ),
  ])
# ---
# name: test_gas_report_data
  DeviceReport(
    consumption=None,
    feed_in=None,
    gas=GasReport(
      avg_consumption=0.471666666666667,
      avg_consumption_kwh=4.71666666666667,
      avg_delta=0.471666666666667,
      consumption=11.32,
      consumption_kwh=113.2,
      current_consumption=0.12,
      current_consumption_kwh=1.2,
      max=1.89,
      max_consumption=1.89,
      max_consumption_kwh=18.9,
      max_currency=2.84172043010753,
      meter_readings=list([
      ]),
      min=0.01,
      min_consumption=0.01,
      min_consumption_kwh=0.1,
      report_values=list([
        ReportValue(
          complete=True,
          consumption=0.11,
          consumption_kwh=1.1,
          current_consumption=0.12,
          current_consumption_kwh=1.2,
          delta=0.11,
          delta_currency=0.171720430107527,
          delta_ht=None,
          delta_nt=None,
          device_id='9x9x1f12xx5x',
          timestamp=datetime.datetime(2025, 11, 28, 8, 0, tzinfo=datetime.timezone.utc),
          total_delta=11.0,
          total_delta_currency=17.1412903225806,
          values_type=1,
        ),
        ReportValue(
          complete=True,
          consumption=0.07,
          consumption_kwh=0.7,
          current_consumption=None,
          current_consumption_kwh=None,
          delta=0.07,
          delta_currency=0.111720430107527,
          delta_ht=None,
          delta_nt=None,
          device_id='9x9x1f12xx5x',
          timestamp=datetime.datetime(2025, 11, 28, 7, 0, tzinfo=datetime.timezone.utc),
          total_delta=7.0,
          total_delta_currency=None,
          values_type=1,
        ),
      ]),
      sum=11.32,
      sum_currency=17.1412903225806,
      total_delta=11.32,
      total_delta_currency=17.1412903225806,
    ),
  )
# ---
# name: test_heat_meter_data
  HeatMeter(
    delta_energy=4,
    delta_volume=0.23999999999978172,
    outdated=False,
    timestamp=datetime.datetime(2024, 12, 16, 22, 14, 59, tzinfo=datetime.timezone.utc),
    total_energy=66000,
    total_volume=4500.1,
  )
# ---
# name: test_invalid_power_meter_data
  PowerMeter(
    energy_return=None,
    energy_usage=None,
    energy_usage_high_tariff=1111.111,
    energy_usage_low_tariff=1111.111,
    outdated=False,
    power=111,
    timestamp=datetime.datetime(2023, 12, 20, 10, 48, 51, tzinfo=datetime.timezone.utc),
  )
# ---
# name: test_power_meter_data
  PowerMeter(
    energy_return=111.111,
    energy_usage=1111.111,
    energy_usage_high_tariff=None,
    energy_usage_low_tariff=None,
    outdated=False,
    power=111,
    timestamp=datetime.datetime(2023, 12, 20, 10, 48, 51, tzinfo=datetime.timezone.utc),
  )
# ---
# name: test_power_meter_full_data
  PowerMeter(
    energy_return=111.111,
    energy_usage=1111.111,
    energy_usage_high_tariff=1111.111,
    energy_usage_low_tariff=0.011,
    outdated=False,
    power=111,
    timestamp=datetime.datetime(2023, 12, 20, 10, 48, 51, tzinfo=datetime.timezone.utc),
  )
# ---
# name: test_power_report_data
  DeviceReport(
    consumption=EnergyReport(
      max=0.013,
      max_currency=0.006458172043010753,
      meter_readings=list([
      ]),
      report_values=list([
        ReportValue(
          complete=True,
          consumption=None,
          consumption_kwh=None,
          current_consumption=None,
          current_consumption_kwh=None,
          delta=0.0,
          delta_currency=0.0013440860215053765,
          delta_ht=0.0,
          delta_nt=0.0,
          device_id='9x9x1f12xx6x',
          timestamp=datetime.datetime(2025, 12, 6, 22, 0, tzinfo=datetime.timezone.utc),
          total_delta=None,
          total_delta_currency=None,
          values_type=1,
        ),
        ReportValue(
          complete=True,
          consumption=None,
          consumption_kwh=None,
          current_consumption=None,
          current_consumption_kwh=None,
          delta=0.009,
          delta_currency=0.005298172043010753,
          delta_ht=0.009,
          delta_nt=0.0,
          device_id='9x9x1f12xx6x',
          timestamp=datetime.datetime(2025, 12, 6, 21, 0, tzinfo=datetime.timezone.utc),
          total_delta=None,
          total_delta_currency=None,
          values_type=1,
        ),
      ]),
      start_time=datetime.datetime(2025, 12, 5, 22, 45, tzinfo=datetime.timezone.utc),
      start_time_currency=datetime.datetime(2025, 12, 5, 22, 45, tzinfo=datetime.timezone.utc),
      sum=0.12,
      sum_currency=0.09864408602150536,
    ),
    feed_in=EnergyReport(
      max=0.0,
      max_currency=0.0,
      meter_readings=list([
      ]),
      report_values=list([
        ReportValue(
          complete=True,
          consumption=None,
          consumption_kwh=None,
          current_consumption=None,
          current_consumption_kwh=None,
          delta=0.0,
          delta_currency=0.0,
          delta_ht=None,
          delta_nt=None,
          device_id='9x9x1f12xx6x',
          timestamp=datetime.datetime(2025, 12, 6, 22, 0, tzinfo=datetime.timezone.utc),
          total_delta=None,
          total_delta_currency=None,
          values_type=2,
        ),
      ]),
      start_time=datetime.datetime(2025, 12, 5, 22, 45, tzinfo=datetime.timezone.utc),
      start_time_currency=None,
      sum=0.0,
      sum_currency=0.0,
    ),
    gas=None,
  )
# ---
# name: test_raw_response_data
  dict({
    'A_Minus': 111.111,
    'A_Plus': 1111.111,
    'Outdated': False,
    'Timestamp': 1703069331,
    'Watt': 111,
  })
# ---
# name: test_water_meter_data
  WaterMeter(
    cold_water=1111.111,
    outdated=False,
    timestamp=datetime.datetime(2023, 12, 20, 10, 45, 7, tzinfo=datetime.timezone.utc),
    warm_water=0.0,
  )
# ---
